# QtProjectTemplate

./: .clang-format  .gitignore  CMakeLists.txt  README.md  qt5.natvis  qt6.natvis
.github/workflows/: build.yml  linux_package.yml  mac-package.yml  win_package.yml
scripts/: README.md  README.zh.md  build_linux_package.py  build_windows_package.py  nsis_package.nsi
src/: CMakeLists.txt  main.cpp  version.h.in
src/resources/: app.rc
src/resources/linux/: QtProjectTemplate.desktop.in
src/resources/mac/: logo.icns
tests/: README.md
